styles.css
@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Space+Grotesk:wght@300..700&display=swap");

:root {
  --background: #211951;
  --text: #f0f3ff;
  --accent: #836fff;
}

*,
::before,
::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

#main-doc {
  height: auto;
  width: 100%;
  display: flex;
  background-color: var(--background);
  color: var(--text);
  font-family: "Inconsolata", sans-serif;
}

/* NAV */

#navbar {
  padding: 4rem;
  width: 30%;
  background-color: var(--text);
  color: var(--accent);
  border-bottom-right-radius: 1rem;
}

ul,
li,
a {
  padding: 0;
  margin: 0;
  list-style: none;
  text-decoration: none;
}

#navbar .title {
  font-family: "Space Grotesk", monospace;
  text-transform: uppercase;
  font-size: 4rem;
  padding-bottom: 2rem;
}

#navbar a {
  color: var(--accent);
  font-size: 1.75rem;
  font-weight: bold;
}

/* SECTIONS */

.sections {
  width: 70%;
  padding: 4rem;
}

header {
  font-family: "Space Grotesk";
  text-transform: uppercase;
  font-size: 2.5rem;
  font-weight: bold;
  padding-bottom: 1rem;
}

.main-section {
  padding: 1.25rem 0;
}

.subtitle {
  padding-bottom: 1rem;
  font-style: italic;
}

